--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="linear/01_intro.js"></script>
-    <title>LinearSearch</title>
+    
+    <!-- <script src="binary/02_binary_exercise.js"></script>
+    <script src="binary/01_binary_intro.js"></script> -->
+    <script src="binary/binary_search_colt.js"></script>
+    <title>Binary Search</title>
 </head>
 <body>
     
