--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     
     <!-- <script src="binary/02_binary_exercise.js"></script>
     <script src="binary/01_binary_intro.js"></script> -->
-    <script src="binary/binary_search_colt.js"></script>
+    <!-- <script src="binary/binary_search_colt.js"></script> -->
+    <script src="strings/naive_aproatch.js"></script>
     <title>Binary Search</title>
 </head>
 <body>
